--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -20,5 +20,6 @@
     <a href="https://www.spotify.com">
         <img src="https://plus.unsplash.com/premium_photo-1687382111414-7b87afa5da34?q=80&w=870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Woman holding a photograph" style="width:200px;">
     </a>
+    <a href="tweets.html">tweets</a>
 </body>
 </html>
