--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -6,6 +6,12 @@
     <title>My First Portfolio</title>
 </head>
 <body>
-    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">President William Ruto convenes a high-level meeting with senior security officials including Interior Cabinet Secretary Kithure Kindiki and Inspector-General of Police Japhet Koome to address concerns over outdated crowd-control tactics used against new wave of unarmed and… <a href="https://t.co/6VhYXUFhbI">pic.twitter.com/6VhYXUFhbI</a></p>&mdash; Cyprian, Is Nyakundi (@C_NyaKundiH) <a href="https://twitter.com/C_NyaKundiH/status/1804608041158869410?ref_src=twsrc%5Etfw">June 22, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <header>
+        <main>
+            <article>
+    <aside><blockquote class="twitter-tweet"><p lang="en" dir="ltr">President William Ruto convenes a high-level meeting with senior security officials including Interior Cabinet Secretary Kithure Kindiki and Inspector-General of Police Japhet Koome to address concerns over outdated crowd-control tactics used against new wave of unarmed and… <a href="https://t.co/6VhYXUFhbI">pic.twitter.com/6VhYXUFhbI</a></p>&mdash; Cyprian, Is Nyakundi (@C_NyaKundiH) <a href="https://twitter.com/C_NyaKundiH/status/1804608041158869410?ref_src=twsrc%5Etfw">June 22, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script></aside>
+            </header>
+        </main>
+    </article>
 </body>
 </html>
