--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -19,6 +19,38 @@
     <p> This is my first project that I'm proud of.</p>
     
     <p>Thank you for visiting my webpage!</p>
+    <table>
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Age</th>
+                <th>Country</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>John</td>
+                <td>25</td>
+                <td>USA</td>
+            </tr>
+            <tr>
+                <td>Emily</td>
+                <td>28</td>
+                <td>Canada</td>
+            </tr>
+            <tr>
+                <td>Michael</td>
+                <td>32</td>
+                <td>Australia</td>
+            </tr>
+            <tr>
+                <td>Sophia</td>
+                <td>21</td>
+                <td>UK</td>
+            </tr>
+        </tbody>
+    </table>
+</article>
     <aside>
         <ul>
             <li>
@@ -28,8 +60,7 @@
     <a href="tweets.html">tweets</a>
             </li>
         </ul>
-    </aside>
-            </article>
+     </aside>
         </main>
     </header>
     <footer>
