--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -13,5 +13,8 @@
             </header>
         </main>
     </article>
+    <footer>
+        <p>Made by Kent</p>
+    </footer>
 </body>
 </html>
