--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -43,6 +43,6 @@
 <p>LinkedIn: <a href="https://www.linkedin.com/in/kent-muia-1748672b7/" target="_blank">Your LinkedIn profile</a></p>
 </body>
 <footer>
-    <p>Work by Kent Muia</p>
+    <p>&copy;2024 Kent Muia</p>
 </footer>
 </html>
